{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 14,
  "lineage": "0ae0f345-993e-e754-dc9f-526b68c57137",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03deb8c961063af8c",
            "arn": "arn:aws:ec2:us-east-1:611925743092:instance/i-0fae1bccb3b2609a3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fae1bccb3b2609a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e0963e26af51ae66"
              }
            ],
            "primary_network_interface_id": "eni-0e0963e26af51ae66",
            "private_dns": "ip-10-10-1-220.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.220",
            "public_dns": "ec2-44-202-53-98.compute-1.amazonaws.com",
            "public_ip": "44.202.53.98",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a4bfd1983619aad4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068cd911b9192319d",
            "tags": {
              "Name": "k8s-master-1",
              "role": "master"
            },
            "tags_all": {
              "Name": "k8s-master-1",
              "role": "master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e1c4522e84121fc8"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "611925743092",
            "id": "i-0fae1bccb3b2609a3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.k8s",
            "aws_subnet.k8s_public",
            "aws_vpc.k8s",
            "data.aws_ami.ubuntu_2204",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03deb8c961063af8c",
            "arn": "arn:aws:ec2:us-east-1:611925743092:instance/i-04bf855de63e7fbf7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04bf855de63e7fbf7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-001c0c85eec719db7"
              }
            ],
            "primary_network_interface_id": "eni-001c0c85eec719db7",
            "private_dns": "ip-10-10-1-142.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.142",
            "public_dns": "ec2-54-210-177-70.compute-1.amazonaws.com",
            "public_ip": "54.210.177.70",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c0562d0cf34402ab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068cd911b9192319d",
            "tags": {
              "Name": "k8s-worker-1",
              "role": "worker"
            },
            "tags_all": {
              "Name": "k8s-worker-1",
              "role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e1c4522e84121fc8"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "611925743092",
            "id": "i-04bf855de63e7fbf7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.k8s",
            "aws_subnet.k8s_public",
            "aws_vpc.k8s",
            "data.aws_ami.ubuntu_2204",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03deb8c961063af8c",
            "arn": "arn:aws:ec2:us-east-1:611925743092:instance/i-07b27934327065c9c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07b27934327065c9c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-048b42f8251461252"
              }
            ],
            "primary_network_interface_id": "eni-048b42f8251461252",
            "private_dns": "ip-10-10-1-183.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.183",
            "public_dns": "ec2-52-91-255-121.compute-1.amazonaws.com",
            "public_ip": "52.91.255.121",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ab49baadc901f8b5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068cd911b9192319d",
            "tags": {
              "Name": "k8s-worker-2",
              "role": "worker"
            },
            "tags_all": {
              "Name": "k8s-worker-2",
              "role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e1c4522e84121fc8"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "611925743092",
            "id": "i-07b27934327065c9c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.k8s",
            "aws_subnet.k8s_public",
            "aws_vpc.k8s",
            "data.aws_ami.ubuntu_2204",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611925743092:internet-gateway/igw-018cdfda7b2093cc1",
            "id": "igw-018cdfda7b2093cc1",
            "owner_id": "611925743092",
            "region": "us-east-1",
            "tags": {
              "Name": "k8s-igw"
            },
            "tags_all": {
              "Name": "k8s-igw"
            },
            "vpc_id": "vpc-06f030a6094c93da7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "k8s_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611925743092:route-table/rtb-094779e412b4ae152",
            "id": "rtb-094779e412b4ae152",
            "owner_id": "611925743092",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-018cdfda7b2093cc1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-public-rt"
            },
            "tags_all": {
              "Name": "k8s-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f030a6094c93da7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "611925743092",
            "id": "rtb-094779e412b4ae152",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.k8s",
            "aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k8s_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7a3d3b97e340d3c",
            "region": "us-east-1",
            "route_table_id": "rtb-094779e412b4ae152",
            "subnet_id": "subnet-068cd911b9192319d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.k8s",
            "aws_route_table.k8s_public",
            "aws_subnet.k8s_public",
            "aws_vpc.k8s",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611925743092:security-group/sg-0e1c4522e84121fc8",
            "description": "Allow SSH and Kubernetes traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1c4522e84121fc8",
            "ingress": [
              {
                "cidr_blocks": [
                  "122.171.17.231/32"
                ],
                "description": "K8s API",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "122.171.17.231/32"
                ],
                "description": "NodePort services",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "122.171.17.231/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Cluster internal",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "k8s-lab-sg",
            "name_prefix": "",
            "owner_id": "611925743092",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-lab-sg"
            },
            "tags_all": {
              "Name": "k8s-lab-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f030a6094c93da7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "611925743092",
            "id": "sg-0e1c4522e84121fc8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8s_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611925743092:subnet/subnet-068cd911b9192319d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068cd911b9192319d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "611925743092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "k8s-public-subnet"
            },
            "tags_all": {
              "Name": "k8s-public-subnet"
            },
            "vpc_id": "vpc-06f030a6094c93da7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "611925743092",
            "id": "subnet-068cd911b9192319d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.k8s",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611925743092:vpc/vpc-06f030a6094c93da7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0e69fccd6f6759f48",
            "default_route_table_id": "rtb-083a8571ea3e24028",
            "default_security_group_id": "sg-05d7ece219fe2b9b7",
            "dhcp_options_id": "dopt-0854854a74e15d8d1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06f030a6094c93da7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-083a8571ea3e24028",
            "owner_id": "611925743092",
            "region": "us-east-1",
            "tags": {
              "Name": "k8s-lab-vpc"
            },
            "tags_all": {
              "Name": "k8s-lab-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "611925743092",
            "id": "vpc-06f030a6094c93da7",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}